update social media

--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
                     <div class ="social-bar">
                         <a href="http://www.linkedin.com/in/kenny-ho-060a69ba"><i class ="fa fa-linkedin-square fa-5x" style="color:#0077B5;"></i></a>
                         <a href="http://www.facebook.com/kenny.ho.169067"><i class="fa fa-facebook-square fa-5x" style="color:#3b5998;"></i></a>
-                        <a href="http://twitter.com/kennyhothedev"><i class="fa fa-twitter-square fa-5x" style="color:#55acee;"></i></a>
-                        <a href=""><i class="fa fa-instagram fa-5x"style="color:#3f729b;"></i></a>
+                        <a href="http://twitter.com/_kennyho"><i class="fa fa-twitter-square fa-5x" style="color:#55acee;"></i></a>
+                        <a href="http://www.instagram.com/kennyho.code/"><i class="fa fa-instagram fa-5x"style="color:#3f729b;"></i></a>
                         
                     </div>
-                    <a href="mailto:kennyhothedev@gmail.com">kennyhothedev@gmail.com</a>
+                    <a href="mailto:kennyhothedev@gmail.com">kennyho.code@gmail.com</a>
 
                  <p id="footer">© Kenny Ho 2016 </p>
              </div>
