updated for sentiment text analysis for current

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
               <h4>Current Work:</h4>
               <ul>
                   <li>Work: Freelance Web Developer using Django</li>
-                  <li>Personal Project: Text Sentiment Analysis of Sports Fans Over Time</li>
+                  <li>Personal Project: <a href="https://protected-bayou-78956.herokuapp.com">Text Sentiment Analysis of Sports Fans Over Time</a>
+                      <p> A web application that takes the daily sentiment text analysis of fans comments from teams in professional sports leagues. The data is then shown in a graph to analyze the rate of change for past 30 days, past 12 months, or past years.
+                  </li>
                   <li>MOOC: <a href="https://www.coursera.org/learn/python-data-analysis">Introduction to Data Science in Python</a> (Coursera)</li>
                   <li>Reading: <a href="https://www.amazon.com/Effective-Engineer-Engineering-Disproportionate-Meaningful/dp/0996128107/ref=sr_1_1?ie=UTF8&qid=1495241437&sr=8-1&keywords=efficient+engineer">The Effective Engineer: How to Leverage Your Efforts In Software Engineering to Make a Disproportionate and Meaningful Impact  </a> (Edmond Lau)</li>
                   <li>Writing: Diving Deep into Python</li>
