--- a/index.html
+++ b/index.html
@@ -1,159 +1,254 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
+
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kenny Ho</title>
+    <title>Scrolling Nav - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/person_site.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom styles for this template -->
+    <link href="css/scrolling-nav.css" rel="stylesheet">
 
   </head>
 
-  <body>
+  <body id="page-top">
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg  white-bg fixed-top" id="mainNav">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Kenny Ho</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul id="link-nav" class="nav navbar-nav">
-            <li><a href="Kenny_Ho_CS_Resume.pdf">CV</a></li>
-            <li><a href="http://github.com/kennyho-code">Github</a></li>
+        <a class="navbar-brand js-scroll-trigger" id="navBrand" href="#page-top">Kenny Ho</a>
 
-          </ul>
-        </div><!--/.nav-collapse -->
+
+
       </div>
     </nav>
 
-    <div class="container">
 
-      <div class="content">
-          
-<div class="about-me">
-            <h4>About Me:</h4>
-            <p>
-                I'm a young, enthusiastic, and passionate Computer Science student at VCU. Not only do I believe in higher education, but I also believe knowledge can be obtained through various sources. The vast amount of information that is floating around the internet can be used to transcend the problems of location and affordability.
-                With that in mind, there is no excuse to grab every detail, of every sentence, of every article that you are interested in. I believe that a person can make their own path in life if they are willing to put in hard work, persevere, and be truly honest with themselves. Signal over noise.</p>
+
+    <header class="greeting text-white">
+      <div class="personal-statement container text-center">
+
+
+        <p class="lead">
+            "Computer science and programming is like pulling on a never ending string. There is always something new to learn. A challenge presents itself everyday."
+        </p>
+      </div>
+    </header>
+
+
+    <section id="about">
+
+
+
+
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-8 mx-auto">
+            <p class="section-title">Resume</p>
+
+            <p class="lead"><b>EDUCATION: </b></p>
+            <hr>
+
+            <div class="degree">
+            <p style="margin: 0 0 0 0"><img class="icon" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cd/VCU_Seal_sans_logotype.svg/1200px-VCU_Seal_sans_logotype.svg.png"> Virginia Commonwealth University <span><i>2015 - 2017</i></span></p>
+            <p>Post-baccalaureate in Computer Science <span><i>Richmond, VA</i></span> </p>
+          </div>
+
+            <div class="course-work">
+            <p>Relevant Coursework:</p>
+            <ul>
+              <li>Programming Languages</li>
+              <li>Data Science</li>
+              <li>Database Theory</li>
+              <li>Advanced Algorithms and Analysis</li>
+              <li>Data Structures and Algorithms</li>
+              <li>Computer Organization and Architecture</li>
+              <li>Systems Programming</li>
+              <li>Theory of Computation</li>
+              <li>Discrete Mathematics</li>
+            </ul>
+            </div>
+            <div class="skills-section">
+              <span class="skill"> python </span>
+              <span class="skill"> java </span>
+              <span class="skill"> C </span>
+              <span class="skill"> sql </span>
+              <span class="skill"> git </span>
+
+
+            </div>
+            <div class="degree">
+              <p style="margin: 0 0 0 0"><img class="icon" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cd/VCU_Seal_sans_logotype.svg/1200px-VCU_Seal_sans_logotype.svg.png"> Virginia Commonwealth University <span><i>2009 - 2014</i></span></p>
+              <p>Biology, B.S. <span><i>Richmond, VA</i></span> </p>
+            </div>
+            </br>
+
+            <p> <b>WORK EXPERIENCE:</b> </p>
+            <div class="degree">
+              <p style="margin: 0 0 0 0"><img class="icon" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAEAAQAAAAAAAAgBAAAAJDU1ZmYxZmQ4LTY0OWUtNDVmYy05Y2RlLTk5MjNjYWVjYjc5YQ.png">Capital One<span><i>Fall 2016 - Spring 2017</i></span></p>
+              <p>Data Analyst Intern <span><i>Richmond, VA</i></span> </p>
+              <p> Created a spelling checking internal tools application to reduce the error rate for analysts
+                  and used webscraping to maintain the consistent and accurate databases.
+              </p>
+            </div>
+            <div class="skills-section">
+              <span class="skill"> python </span>
+              <span class="skill"> django </span>
+              <span class="skill"> javascript </span>
+              <span class="skill"> sql </span>
+              <span class="skill"> git </span>
+              <span class="skill"> html </span>
+              <span class="skill"> css </span>
+
+
+            </div>
+
+            <div class="degree">
+              <p style="margin: 0 0 0 0"><img class="icon" src="https://media.licdn.com/mpr/mpr/shrinknp_100_100/AAIA_wDGAAAAAQAAAAAAAAqZAAAAJGJhMjQ4NzE1LTJhYzctNGMyNS1hNjc3LWU1MzcxNjgxMjMyYw.png">Nasdaq<span><i>Summer 2016</i></span></p>
+              <p>Software Engineering Intern <span><i>Richmond, VA</i></span> </p>
+              <p>Implemented features that allow financial analysts to customize groups for stocks to find relative strength of
+                performance and created backend tools to help internal analysts contact customers through email.</p>
+            </div>
+
+            <div class="skills-section">
+              <span class="skill"> PHP </span>
+              <span class="skill"> Javascript </span>
+              <span class="skill"> HTML </span>
+              <span class="skill"> CSS </span>
+
+
+            </div>
+
+          </div>
         </div>
-        
+      </div>
+    </section>
 
-                      <hr>
-          <div class="moocs">
-              <h4>Current Work:</h4>
-              <ul>
-                  <li>Work: Freelance Web Developer using Django</li>
-                  <li><a href="https://protected-bayou-78956.herokuapp.com">Text Sentiment Analysis of Sports Fans Over Time</a> (personal project)
-                      <p> A web application that takes the daily sentiment text analysis of fans comments from teams in professional sports leagues. The data is then shown in a graph to analyze the rate of change for past 30 days, past 12 months, or past years.
-                  </li>
-                  <li>MOOC: <a href="https://www.coursera.org/learn/python-data-analysis">Introduction to Data Science in Python</a> (Coursera)</li>
-                  <li>Reading: <a href="https://www.amazon.com/Effective-Engineer-Engineering-Disproportionate-Meaningful/dp/0996128107/ref=sr_1_1?ie=UTF8&qid=1495241437&sr=8-1&keywords=efficient+engineer">The Effective Engineer: How to Leverage Your Efforts In Software Engineering to Make a Disproportionate and Meaningful Impact  </a> (Edmond Lau)</li>
-                  <li>Writing: Diving Deep into Python</li>
+    <section id="services" class="bg-light">
+      <div class="container">
 
-              </ul>
+            <p class="section-title">Projects</p>
+
+
+
+
+
+            <div class="row">
+              <div class="col-sm-6 project-col">
+                <div class="card">
+                  <img class="card-img-top" src="img/sports_sentiment.png" alt="Card image cap">
+                  <div class="card-block">
+                    <p class="card-text"><b>Sports Sentiment</b> Temporal data vizualization of text sentiment of teams in professional sports leagues.</p>
+                    <div class="skills-section-small">
+                      <span class="skill"> PHP </span>
+                      <span class="skill"> Javascript </span>
+                      <span class="skill"> HTML </span>
+                      <span class="skill"> CSS </span>
+
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 project-col">
+                <div class="card">
+                  <img class="card-img-top" src="img/earthquake_tracker.png" alt="Card image cap">
+                  <div class="card-block">
+                    <p class="card-text"><b> Earthquake Tracker</b> Geographical locations of recent earthquakes that are categorized by level. </p>
+                    <div class="skills-section-small">
+                      <span class="skill"> PHP </span>
+                      <span class="skill"> Javascript </span>
+                      <span class="skill"> HTML </span>
+                      <span class="skill"> CSS </span>
+
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+        <div class="row">
+          <div class="col-sm-6 project-col">
+            <div class="card">
+              <img class="card-img-top" src="img/text_editor_pic.png" alt="Card image cap">
+              <div class="card-block">
+                <p class="card-text"><b>Text Editor</b> A simple text editor with spell check, word completion, and markov text generation.</p>
+                <div class="skills-section-small">
+                  <span class="skill"> PHP </span>
+                  <span class="skill"> Javascript </span>
+                  <span class="skill"> HTML </span>
+                  <span class="skill"> CSS </span>
+
+
+                </div>
+              </div>
+            </div>
           </div>
+          <div class="col-sm-6 project-col">
+            <div class="card">
+              <img class="card-img-top" src="img/uhacks.png" alt="Card image cap">
+              <div class="card-block">
+                <p class="card-text"><b>uHacks</b> Schedule and mapping of present and future major league hacking hackathons.</p>
+                <div class="skills-section-small">
+                  <span class="skill"> PHP </span>
+                  <span class="skill"> Javascript </span>
+                  <span class="skill"> HTML </span>
+                  <span class="skill"> CSS </span>
 
-            <hr>
-          <div class="past-projects">
-              <h4>Past Projects:</h4>
-              <ul>
-                  <li><a href="https://sheltered-tor-73161.herokuapp.com/">hackU </a>(Februrary 2016)
-                      <p>A web application that maps all Major League Hacking's hackathons on google maps.</p>
-                  </li>
-                  <li><a href="http://github.com/hokatvcu/UCSD_Text_Editor/">Text Editor</a> (December 2015)
-                      <p>A Java GUI based text editor using specialized data structures to implement spell check, word completion, Markov text generation, and Flesch score (readability of text).</p>
-                  </li>
-                  <li>
-                      <a href="https://github.com/hokatvcu/UCSD_Earthquake_Map">Earthquake Tracker </a> (October 2015)
-                      <p>A Java GUI based application using UnfoldingMaps and Processing APIs. The goal of the project was to learn object-oriented programming by implementing a world map with interactive markers that show information about recent earthquakes.</p>
-                  </li>
-              </ul>
+
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
 
 
 
-            <hr>
-          <div class="moocs">
-              <h4>MOOC's I've Enjoyed:</h4>
-              <ul>
-                  <li><a href="https://www.udacity.com/course/intro-to-computer-science--cs101">CS101</a> (Udacity)</li>
-                  <li><a href="https://www.edx.org/course/introduction-computer-science-mitx-6-00-1x-10">Introduction to Computer Science and Programming Using Python</a> (edX)</li>
-                  <li><a href="https://www.udacity.com/course/technical-interview--ud513">Technical Interview </a>(Udacity)</li>
-                  <li><a href="https://www.coursera.org/specializations/java-object-oriented">Object Oriented Java Programming: Data Structures and Beyond Specialization</a> (Coursera)</li>
-
-
-              </ul>
-          </div>
-
-          <hr>
-          <div class="problem-solving">
-              <h4>Problem Solving Sites I Use:</h4>
-              <ul>
-                  <li><a href="https://www.pramp.com/">Pramp</a> (mock interview technical questions)</li>
-                  <li><a href="http://codeforces.com/">CodeForces</a> (timed competitive coding)</li>
-                  <li><a href="http://codewars.com/">CodeWars</a> (untimed competitive coding)</li>
 
 
 
-              </ul>
-          </div>
 
 
-                    <hr>
-          <div class="hobbies">
-              <h4>Other Hobbies:</h4>
-              <p> I love basketball (go wizards!), training, meditation , and nutrition. Overall I try to be healthy in all aspects of life because I believe they all interconnect.</p>
-          </div>
 
-    <hr>
+
+
+
+
+
 
       </div>
-
-          <div class="contact-me">
-              <h4>Contact Me:</h4>
-              <ul>
-                  <li><a href="mailto:kennyho.code@gmail.com">kennyho.code@gmail.com</a></li>
-                  <li><a href="http://www.linkedin.com/in/kennyho-code/">Linkedin</a></li>
-                  <li><a href="https://github.com/kennyho-code/UCSD_Text_Editor">Github</a></li>
-
-              </ul>
-          </div>
+    </section>
 
 
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Kenny Ho 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-    </div>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
+    <!-- Custom JavaScript for this theme -->
+    <script src="js/scrolling-nav.js"></script>
 
-
-
-
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
+
 </html>
+
