--- a/index.html
+++ b/index.html
@@ -9,59 +9,40 @@
     <meta name="author" content="">
 
     <title>Kenny Ho</title>
-
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-
   </head>
 
   <body id="page-top">
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg  white-bg fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" id="navBrand" href="#page-top">Kenny Ho</a>
-
-
-
       </div>
     </nav>
 
-
-
     <header class="greeting text-white">
       <div class="personal-statement container text-center">
-
-
         <p class="lead">
             "Computer science and programming is like pulling on a never ending string. There is always something new to learn. A challenge presents itself everyday."
         </p>
       </div>
     </header>
 
-
     <section id="about">
-
-
-
-
       <div class="container">
         <div class="row">
 
           <div class="col-lg-8 mx-auto">
             <p class="section-title">Resume</p>
-
             <p class="lead"><b>EDUCATION: </b></p>
             <hr>
-
             <div class="degree">
             <p style="margin: 0 0 0 0"><img class="icon" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cd/VCU_Seal_sans_logotype.svg/1200px-VCU_Seal_sans_logotype.svg.png"> Virginia Commonwealth University <span><i>2015 - 2017</i></span></p>
             <p>Post-baccalaureate in Computer Science <span><i>Richmond, VA</i></span> </p>
           </div>
-
             <div class="course-work">
             <p>Relevant Coursework:</p>
             <ul>
@@ -82,8 +63,6 @@
               <span class="skill"> C </span>
               <span class="skill"> sql </span>
               <span class="skill"> git </span>
-
-
             </div>
             <div class="degree">
               <p style="margin: 0 0 0 0"><img class="icon" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/cd/VCU_Seal_sans_logotype.svg/1200px-VCU_Seal_sans_logotype.svg.png"> Virginia Commonwealth University <span><i>2009 - 2014</i></span></p>
@@ -107,8 +86,6 @@
               <span class="skill"> git </span>
               <span class="skill"> html </span>
               <span class="skill"> css </span>
-
-
             </div>
 
             <div class="degree">
@@ -123,8 +100,6 @@
               <span class="skill"> Javascript </span>
               <span class="skill"> HTML </span>
               <span class="skill"> CSS </span>
-
-
             </div>
 
           </div>
@@ -134,26 +109,19 @@
 
     <section id="services" class="bg-light">
       <div class="container">
-
-            <p class="section-title">Projects</p>
-
-
-
-
+        <p class="section-title">Projects</p>
 
             <div class="row">
               <div class="col-sm-6 project-col">
                 <div class="card">
                   <img class="card-img-top" src="img/sports_sentiment.png" alt="Card image cap">
                   <div class="card-block">
-                    <p class="card-text"><b>Sports Sentiment</b> Temporal data vizualization of text sentiment of teams in professional sports leagues.</p>
+                    <p class="card-text"><b><a href="https://protected-bayou-78956.herokuapp.com/nba/sports_sentiment">Sports Sentiment </a></b> Temporal data vizualization of text sentiment of teams in professional sports leagues.</p>
                     <div class="skills-section-small">
-                      <span class="skill"> PHP </span>
-                      <span class="skill"> Javascript </span>
-                      <span class="skill"> HTML </span>
-                      <span class="skill"> CSS </span>
-
-
+                      <span class="skill"> Python </span>
+                      <span class="skill"> Django </span>
+                      <span class="skill"> JAVASCRIPT </span>
+                      <span class="skill"> HTML/CSS </span>
                     </div>
                   </div>
                 </div>
@@ -162,34 +130,26 @@
                 <div class="card">
                   <img class="card-img-top" src="img/earthquake_tracker.png" alt="Card image cap">
                   <div class="card-block">
-                    <p class="card-text"><b> Earthquake Tracker</b> Geographical locations of recent earthquakes that are categorized by level. </p>
+                    <p class="card-text"><b><a href="https://github.com/kennyho-code/UCSD_Earthquake_Map">Earthquake Tracker</a></b> Geographical locations of recent earthquakes that are categorized by level. </p>
                     <div class="skills-section-small">
-                      <span class="skill"> PHP </span>
-                      <span class="skill"> Javascript </span>
-                      <span class="skill"> HTML </span>
-                      <span class="skill"> CSS </span>
-
-
+                      <span class="skill"> Python </span>
+                      <span class="skill"> Django </span>
+                      <span class="skill"> JAVASCRIPT </span>
+                      <span class="skill"> HTML/CSS </span>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
 
-
         <div class="row">
           <div class="col-sm-6 project-col">
             <div class="card">
               <img class="card-img-top" src="img/text_editor_pic.png" alt="Card image cap">
               <div class="card-block">
-                <p class="card-text"><b>Text Editor</b> A simple text editor with spell check, word completion, and markov text generation.</p>
+                <p class="card-text"><b><a href="https://github.com/kennyho-code/UCSD_Text_Editor">Text Editor</a></b> A simple text editor with spell check, word completion, and markov text generation.</p>
                 <div class="skills-section-small">
-                  <span class="skill"> PHP </span>
-                  <span class="skill"> Javascript </span>
-                  <span class="skill"> HTML </span>
-                  <span class="skill"> CSS </span>
-
-
+                  <span class="skill"> JAVA </span>
                 </div>
               </div>
             </div>
@@ -198,37 +158,17 @@
             <div class="card">
               <img class="card-img-top" src="img/uhacks.png" alt="Card image cap">
               <div class="card-block">
-                <p class="card-text"><b>uHacks</b> Schedule and mapping of present and future major league hacking hackathons.</p>
+                <p class="card-text"><b><a href="https://sheltered-tor-73161.herokuapp.com/">uHacks</a></b> Schedule and mapping of present and future major league hacking hackathons.</p>
                 <div class="skills-section-small">
-                  <span class="skill"> PHP </span>
-                  <span class="skill"> Javascript </span>
-                  <span class="skill"> HTML </span>
-                  <span class="skill"> CSS </span>
-
+                  <span class="skill"> JAVA </span>
 
                 </div>
               </div>
             </div>
           </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
       </div>
     </section>
-
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
@@ -237,14 +177,11 @@
       </div>
       <!-- /.container -->
     </footer>
-
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
     <!-- Custom JavaScript for this theme -->
     <script src="js/scrolling-nav.js"></script>
 
