add nba highlights

--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
             <div class="row">
               <div class="col-sm-6 project-col">
                 <div class="card">
-                  <img class="card-img-top" src="img/sports_sentiment.png" alt="Card image cap">
+                  <img class="card-img-top" src="img/nba_highlights.png" alt="Card image cap">
                   <div class="card-block">
-                    <p class="card-text"><b><a href="https://protected-bayou-78956.herokuapp.com/nba/sports_sentiment">Sports Sentiment </a></b> Temporal data vizualization of text sentiment of teams in professional sports leagues.</p>
+                    <p class="card-text"><b><a href="https://nba-site.herokuapp.com/">NBA Highlights </a></b> Web application that allows users to efficiently query NBA games to view the game's highlights, stats, and Twitter</p>
                     <div class="skills-section-small">
                       <span class="skill"> Python </span>
                       <span class="skill"> Django </span>
                       <span class="skill"> JAVASCRIPT </span>
+                      <span class="skill"> Angular </span>
                       <span class="skill"> HTML/CSS </span>
                     </div>
                   </div>
@@ -128,9 +129,9 @@
               </div>
               <div class="col-sm-6 project-col">
                 <div class="card">
-                  <img class="card-img-top" src="img/earthquake_tracker.png" alt="Card image cap">
+                  <img class="card-img-top" src="img/sports_sentiment.png" alt="Card image cap">
                   <div class="card-block">
-                    <p class="card-text"><b><a href="https://github.com/kennyho-code/UCSD_Earthquake_Map">Earthquake Tracker</a></b> Geographical locations of recent earthquakes that are categorized by level. </p>
+                    <p class="card-text"><b><a href="http://protected-bayou-78956.herokuapp.com/nba/sports_sentiment">Sports Sentiment </a></b> Temporal data vizualization of text sentiment of teams in professional sports leagues.</p>
                     <div class="skills-section-small">
                       <span class="skill"> Python </span>
                       <span class="skill"> Django </span>
@@ -156,12 +157,14 @@
           </div>
           <div class="col-sm-6 project-col">
             <div class="card">
-              <img class="card-img-top" src="img/uhacks.png" alt="Card image cap">
+              <img class="card-img-top" src="img/earthquake_tracker.png" alt="Card image cap">
               <div class="card-block">
-                <p class="card-text"><b><a href="https://sheltered-tor-73161.herokuapp.com/">uHacks</a></b> Schedule and mapping of present and future major league hacking hackathons.</p>
+                <p class="card-text"><b><a href="https://github.com/kennyho-code/UCSD_Earthquake_Map">Earthquake Tracker</a></b> Geographical locations of recent earthquakes that are categorized by level. </p>
                 <div class="skills-section-small">
-                  <span class="skill"> JAVA </span>
-
+                  <span class="skill"> Python </span>
+                  <span class="skill"> Django </span>
+                  <span class="skill"> JAVASCRIPT </span>
+                  <span class="skill"> HTML/CSS </span>
                 </div>
               </div>
             </div>
